--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@angular/router": "~16.0.0",
     "@nx/angular": "16.2.2",
     "angular-gridster2": "^16.0.0",
+    "chart.js": "^3.6.0",
+    "ng2-charts": "^4.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
