--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/platform-browser": "~16.0.0",
     "@angular/platform-browser-dynamic": "~16.0.0",
     "@angular/router": "~16.0.0",
+    "@jsplumbtoolkit/browser-ui-angular": "^6.0.0",
     "@nx/angular": "16.2.2",
     "angular-gridster2": "^16.0.0",
     "chart.js": "^3.6.0",
